--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "node test/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": ["mime", "mimetype", "file", "extension", "utility"],
+  "author": "kbpramod",
+  "license": "MIT"
 }
