--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "mimetype-file",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "package to get MIME type based on file extension",
   "main": "src/index.js",
   "type": "module",
   "types": "src/index.d.ts",
   "scripts": {
     "test": "node test/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kbpramod3/mimetype-file.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kbpramod3/mimetype-file/issues"
   },
   "keywords": ["mime", "mimetype", "file", "extension", "utility"],
   "author": "kbpramod",
